EmptyPassport: make sure all text is aligned center

--- a/src/components/passport/theme.css
+++ b/src/components/passport/theme.css
@@ -4,6 +4,7 @@
 
 .passport-empty {
   max-width: 240px !important;
+  text-align: center;
 }
 
 .prevent-overflow {
